--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>br.com.softplan.cadastropf</groupId>
     <artifactId>cadastropf</artifactId>
     <version>1.0.0</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>${project.artifactId}</name>
 
@@ -17,7 +17,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <startClass>SpringBootStandAloneWarApp</startClass>
+        <startClass>Application</startClass>
     </properties>
 
     <dependencies>
