--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,9 +7,9 @@ server.port=8080
 
 #Banco de Dados
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/beecloud_gm?autoReconnect=true&useSSL=false
-jdbc.user=portalgm
-jdbc.pass=Portal4GM##
+jdbc.url=jdbc:mysql://localhost:3306/cadastro?autoReconnect=true&useSSL=false
+jdbc.user=wxs
+jdbc.pass=!!@@wxs##$$
 init-db=false
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #hibernate.show_sql=true
